k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-end
spec:
  selector:
    app: front-end
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  type: LoadBalancer

---
apiVersion: v1
kind: Service
metadata:
  name: back-end
spec:
  selector:
    app: back-end
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
  type: ClusterIP
