k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gallery-of-terror-dreams-ingress
spec:
  rules:
  - host: front-end.gallery-of-terror-dreams.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: front-end-service
            port:
              number: 8080
  - host: back-end.gallery-of-terror-dreams.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: back-end-service
            port:
              number: 8000
